--- a/Benzene_Conformers.ipynb
+++ b/Benzene_Conformers.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set SMILES for second_mol (toluene)\n",
+    "# set SMILES for second_mol (benzene)\n",
     "second_smiles = \"c1ccccc1\"\n",
     "\n",
     "# Convert to RDKit molecule\n",
