--- a/Benzene_Conformers.ipynb
+++ b/Benzene_Conformers.ipynb
@@ -29,7 +29,7 @@
     "# Add hydrogens\n",
     "first_mol = Chem.AddHs(first_mol)\n",
     "\n",
-    "# Let us make it 3D by generating a random conformer\n",
+    "# 3D by generating a random conformer\n",
     "Chem.AllChem.EmbedMolecule(first_mol)\n",
     "\n",
     "# Optimize molecule\n",
@@ -55,7 +55,7 @@
     "# Add hydrogens\n",
     "second_mol = Chem.AddHs(second_mol)\n",
     "\n",
-    "# Let us make it 3D by generating a random conformer\n",
+    "# 3D by generating a random conformer\n",
     "Chem.AllChem.EmbedMolecule(second_mol)\n",
     "\n",
     "# Optimize molecule\n",
